--- a/resources/language/resource.language.zh_cn/strings.po
+++ b/resources/language/resource.language.zh_cn/strings.po
@@ -164,3 +164,24 @@ msgstr "YouTube"
 msgctxt "#30308"
 msgid "Tubed"
 msgstr "Tubed"
+
+msgctxt "#32000"
+msgid "DNS Resolution"
+msgstr "DNS解析"
+
+msgctxt "#32001"
+msgid "api.themoviedb.org"
+msgstr "api.themoviedb.org"
+
+msgctxt "#32002"
+msgid "webservice.fanart.tv"
+msgstr "webservice.fanart.tv"
+
+msgctxt "#32003"
+msgid "www.imdb.com"
+msgstr "www.imdb.com"
+
+msgctxt "#32004"
+msgid "trakt.tv"
+msgstr "trakt.tv"
+
