--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -167,3 +167,24 @@ msgstr ""
 msgctxt "#30308"
 msgid "Tubed"
 msgstr ""
+
+msgctxt "#32000"
+msgid "DNS Resolution"
+msgstr ""
+
+msgctxt "#32001"
+msgid "api.themoviedb.org"
+msgstr ""
+
+msgctxt "#32002"
+msgid "webservice.fanart.tv"
+msgstr ""
+
+msgctxt "#32003"
+msgid "www.imdb.com"
+msgstr ""
+
+msgctxt "#32004"
+msgid "trakt.tv"
+msgstr ""
+
