--- a/resources/language/resource.language.zh_cn/strings.po
+++ b/resources/language/resource.language.zh_cn/strings.po
@@ -19,11 +19,11 @@ msgstr ""
 
 msgctxt "Addon Summary"
 msgid "Fetch TV Show metadata from themoviedb.org"
-msgstr "从 themoviedb.org 获取电视剧信息"
+msgstr "从 themoviedb.org 获取电视剧元数据"
 
 msgctxt "Addon Description"
 msgid "The Movie Database (TMDb) is a community built movie and TV database. Every piece of data has been added by our amazing community dating back to 2008. TMDb's strong international focus and breadth of data is largely unmatched and something we're incredibly proud of. Put simply, we live and breathe community and that's precisely what makes us different."
-msgstr "TMDb 是一个由网络社区创建的影视数据库。每一条数据都是由我们令人惊叹的社区添加的，可以追溯到2008年。TMDb 强大的国际关注度和数据广度在很大程度上是无与伦比的，我们对此感到无比自豪。简单地说，我们生活在社区中，呼吸着社区的气息，这正是我们与众不同的原因。"
+msgstr "电影数据库（TMDb）是一个由社区共建的影视数据库。自 2008 年起，每一条数据均由我们优秀的社区用户贡献。TMDb 高度的国际化视野和丰富的数据维度在业内罕有匹敌，这也是我们引以为傲的核心优势。简而言之，我们扎根社区、服务社区，这正是我们的与众不同之处。"
 
 msgctxt "#30000"
 msgid "Preferred language"
@@ -31,7 +31,7 @@ msgstr "首选语言"
 
 msgctxt "#30001"
 msgid "Preferred certification country"
-msgstr "首选电影分级国别"
+msgstr "首选分级地区"
 
 msgctxt "#30002"
 msgid "Include certification prefix"
@@ -43,19 +43,19 @@ msgstr "前缀"
 
 msgctxt "#30004"
 msgid "Keep original title"
-msgstr "使用未翻译片名"
+msgstr "保留原始剧名"
 
 msgctxt "#30005"
 msgid "Categorize fanart with text as landscape art"
-msgstr "将含文字的同人画归入场景贴画"
+msgstr "将含文字的同人画归类为横版海报"
 
 msgctxt "#30006"
 msgid "Include country code with studio"
-msgstr "制片公司包含国别码"
+msgstr "出品方信息包含国家/地区代码"
 
 msgctxt "#30007"
 msgid "Add keywords as tags"
-msgstr "关键字添加为标签"
+msgstr "将关键词添加为标签"
 
 msgctxt "#30008"
 msgid "Preferred language (Images)"
@@ -63,7 +63,7 @@ msgstr "首选语言（图片）"
 
 msgctxt "#30009"
 msgid "Use different language for images"
-msgstr "为图片使用不同的语言"
+msgstr "为图片资源使用不同语言版本"
 
 # empty strings from 30007 to 30099
 msgctxt "#30100"
@@ -72,7 +72,7 @@ msgstr "Fanart.tv"
 
 msgctxt "#30101"
 msgid "Client key (optional)"
-msgstr "客户密钥（可选）"
+msgstr "客户端密钥（可选）"
 
 msgctxt "#30102"
 msgid "Enable fanart"
@@ -84,27 +84,27 @@ msgstr "启用海报"
 
 msgctxt "#30104"
 msgid "Enable banner"
-msgstr "启用横幅"
+msgstr "启用横幅图"
 
 msgctxt "#30105"
 msgid "Enable clearlogo"
-msgstr "启用徽标贴画"
+msgstr "启用透明徽标"
 
 msgctxt "#30106"
 msgid "Enable clearart"
-msgstr "启用剪贴画"
+msgstr "启用透明艺术图"
 
 msgctxt "#30107"
 msgid "Enable landscape"
-msgstr "启用场景贴画"
+msgstr "启用横版海报"
 
 msgctxt "#30108"
 msgid "Enable character art"
-msgstr "启用角色贴画"
+msgstr "启用角色艺术图"
 
 msgctxt "#30109"
 msgid "Include art from fanart.tv"
-msgstr "包含来自 fanart.tv 的艺术图片"
+msgstr "包含 fanart.tv 图片资源"
 
 # empty strings from 30110 to 30149
 msgctxt "#30150"
@@ -113,29 +113,29 @@ msgstr "启用季海报"
 
 msgctxt "#30151"
 msgid "Enable season banner"
-msgstr "启用季横幅"
+msgstr "启用季横幅图"
 
 msgctxt "#30152"
 msgid "Enable season landscape"
-msgstr "启用季场景贴画"
+msgstr "启用季横版海报"
 
 # empty strings from 30153 to 30200
 msgctxt "#30200"
 msgid "Advanced"
-msgstr "高级"
+msgstr "高级设置"
 
 msgctxt "#30201"
 msgid "Verbose debug logging"
-msgstr "详细调试日志"
+msgstr "启用详细调试日志"
 
 # emptry strings from 30202 to 30299
 msgctxt "#30300"
 msgid "Ratings"
-msgstr "评分"
+msgstr "评分设置"
 
 msgctxt "#30301"
 msgid "Default rating from"
-msgstr "默认评分来自"
+msgstr "默认评分来源"
 
 msgctxt "#30302"
 msgid "Also add IMDb ratings"
@@ -187,7 +187,7 @@ msgstr "trakt.tv"
 
 msgctxt "#32005"
 msgid "Proxy"
-msgstr "代理"
+msgstr "代理设置"
 
 msgctxt "#32006"
 msgid "TMDB API Base URL"
@@ -211,8 +211,8 @@ msgstr "Trakt TV 基础 URL"
 
 msgctxt "#30021"
 msgid "Write Pinyin Initials to SortTitle"
-msgstr "将片名拼音首字母写入数据库排序名字段"
+msgstr "将剧名拼音首字母写入排序剧名（SortTitle）字段"
 
 msgctxt "#30022"
 msgid "Write Pinyin Initials to OriginalTitle"
-msgstr "将片名拼音首字母写入数据库原始片名字段"
+msgstr "将剧名拼音首字母写入原始剧名（OriginalTitle）字段"
